--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
-    <title>Surfboard liter range calculator</title>
+    <title>Surfboard volume calculator</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-white border-bottom shadow-sm">
@@ -18,7 +18,7 @@
     </nav>
     <header class="bg-light mb-4">
       <div class="container">
-        <h1 class="m-0 py-4 lead">Surfboard liter range calculator</h1>
+        <h1 class="m-0 py-4 lead">Surfboard volume calculator</h1>
       </div>
     </header>
     <section>
