--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <tbody>
             <tr>
               <th scope="row">Weight (<abbr title="Pounds">lbs</abbr>)</th>
-              <td class="font-monospace text-end"><span id="weight-pounds">160.0</span></td>
+              <td class="font-monospace text-end"><span id="weight-pounds">160.00</span></td>
             </tr>
             <tr>
               <th scope="row">Weight (<abbr title="Kilograms">kgs</abbr>)</th>
-              <td class="font-monospace text-end"><span id="weight-kilograms">72.6</span></td>
+              <td class="font-monospace text-end"><span id="weight-kilograms">72.57</span></td>
             </tr>
           </tbody>
         </table>
@@ -62,19 +62,19 @@
           <tbody>
             <tr>
               <td>Pro/Expert</td>
-              <td class="font-monospace"><span id="volume-expert">26.7</span></td>
+              <td class="font-monospace text-end"><span id="volume-expert">26.67</span></td>
             </tr>
             <tr>
               <td>Advanced</td>
-              <td class="font-monospace"><span id="volume-advanced">???</span></td>
+              <td class="font-monospace text-end"><span id="volume-advanced">???</span></td>
             </tr>
             <tr>
               <td>Intermediate</td>
-              <td class="font-monospace"><span id="volume-intermediate">???</span></td>
+              <td class="font-monospace text-end"><span id="volume-intermediate">???</span></td>
             </tr>
             <tr>
               <td>Beginner</td>
-              <td class="font-monospace"><span id="volume-beginner">???</span></td>
+              <td class="font-monospace text-end"><span id="volume-beginner">???</span></td>
             </tr>
           </tbody>
         </table>
