--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h1 class="m-0 py-4 lead">Surfboard volume calculator</h1>
       </div>
     </header>
-    <section>
+    <section class="mb-4">
       <div class="container">
-        <form class="mb-4">
+        <form>
           <div class="row">
             <div class="col">
               <input name="weight" type="number" min="1" max="1000" value="160" class="form-control" id="weight">
@@ -38,9 +38,9 @@
         </form>
       </div>
     </section>
-    <section>
+    <section class="mb-4">
       <div class="container">
-        <table class="table table-bordered mb-4">
+        <table class="table table-bordered">
           <tbody>
             <tr>
               <th scope="row">Weight (<abbr title="Pounds">lbs</abbr>)</th>
@@ -52,6 +52,10 @@
             </tr>
           </tbody>
         </table>
+      </div>
+    </section>
+    <section class="mb-4">
+      <div class="container">
         <table class="table">
           <thead>
             <tr>
@@ -94,13 +98,11 @@
         </table>
       </div>
     </section>
-    <div class="bg-dark">
-      <div class="container">
-        <div class="ratio ratio-16x9">
-          <iframe src="https://www.youtube.com/embed/VC27e24abDc" title="Surf Tip: How to Dial in Your Surfboard Liter Range" allowfullscreen></iframe>
-        </div>
+    <section>
+      <div class="ratio ratio-16x9">
+        <iframe src="https://www.youtube.com/embed/VC27e24abDc" title="Surf Tip: How to Dial in Your Surfboard Liter Range" allowfullscreen></iframe>
       </div>
-    </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
