--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-white border-bottom shadow-sm">
+      <h2 class="visually-hidden">Navigation</h2>
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="img/logo.png" alt="Surf 'n Show" width="24" height="24" class="d-inline-block align-text-top">
@@ -22,6 +23,7 @@
       </div>
     </header>
     <section class="mb-4">
+      <h2 class="visually-hidden">Weight</h2>
       <div class="container">
         <form>
           <div class="row">
@@ -39,6 +41,7 @@
       </div>
     </section>
     <section class="mb-4">
+      <h2 class="visually-hidden">Weight Converted</h2>
       <div class="container">
         <table class="table table-bordered">
           <tbody>
@@ -55,6 +58,7 @@
       </div>
     </section>
     <section class="mb-4">
+      <h2 class="visually-hidden">Results</h2>
       <div class="container">
         <table class="table">
           <thead>
@@ -99,6 +103,7 @@
       </div>
     </section>
     <section>
+      <h2 class="visually-hidden">About</h2>
       <div class="ratio ratio-16x9">
         <iframe src="https://www.youtube.com/embed/VC27e24abDc" title="Surf Tip: How to Dial in Your Surfboard Liter Range" allowfullscreen></iframe>
       </div>
