--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <thead>
             <tr>
               <th scope="col">&nbsp;</th>
-              <th scope="col" colspan="3" class="text-end">Volume Range (<abbr title="Liters">ltrs</abbr>)</th>
+              <th scope="col" colspan="3" class="text-end">Volume range (<abbr title="Liters">ltrs</abbr>)</th>
             </tr>
             <tr>
               <th scope="col">Level</th>
