--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <tr>
               <th scope="col">Level</th>
               <th scope="col" class="text-end">Low</th>
-              <th scope="col" class="text-end bg-light">Medium</th>
+              <th scope="col" class="text-end bg-light fw-bolder">Medium</th>
               <th scope="col" class="text-end">High</th>
             </tr>
           </thead>
@@ -77,25 +77,25 @@
             <tr>
               <td>Pro/Expert</td>
               <td class="font-monospace text-end"><span id="expert-low">25.00</span></td>
-              <td class="font-monospace text-end bg-light"><span id="expert-medium">26.67</span></td>
+              <td class="font-monospace text-end bg-light fw-bolder"><span id="expert-medium">26.67</span></td>
               <td class="font-monospace text-end"><span id="expert-high">27.00</span></td>
             </tr>
             <tr>
               <td>Advanced</td>
               <td class="font-monospace text-end"><span id="advanced-low">27.67</span></td>
-              <td class="font-monospace text-end bg-light"><span id="advanced-medium">28.17</span></td>
+              <td class="font-monospace text-end bg-light fw-bolder"><span id="advanced-medium">28.17</span></td>
               <td class="font-monospace text-end"><span id="advanced-high">28.67</span></td>
             </tr>
             <tr>
               <td>Intermediate</td>
               <td class="font-monospace text-end"><span id="intermediate-low">29.67</span></td>
-              <td class="font-monospace text-end bg-light"><span id="intermediate-medium">30.17</span></td>
+              <td class="font-monospace text-end bg-light fw-bolder"><span id="intermediate-medium">30.17</span></td>
               <td class="font-monospace text-end"><span id="intermediate-high">30.67</span></td>
             </tr>
             <tr>
               <td>Beginner</td>
               <td class="font-monospace text-end"><span id="beginner-low">31.67</span></td>
-              <td class="font-monospace text-end bg-light"><span id="beginner-medium">32.67</span></td>
+              <td class="font-monospace text-end bg-light fw-bolder"><span id="beginner-medium">32.67</span></td>
               <td class="font-monospace text-end"><span id="beginner-high">33.67</span></td>
             </tr>
           </tbody>
