--- a/index.html
+++ b/index.html
@@ -114,6 +114,6 @@
         <iframe src="https://www.youtube.com/embed/VC27e24abDc" title="Surf Tip: How to Dial in Your Surfboard Liter Range" allowfullscreen></iframe>
       </div>
     </section>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
